# relativistic_ray_tracing

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
doc/: RayTracer_RelGen.docx
src/: camera.rs  lib.rs  main.rs  obstacle.rs  ray.rs  space.rs
