[package]
name = "relativistic-ray-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
image = "0.23.14"
num-integer = "0.1"
ang = "0.5.0"
rayon = "1.0"
noise = "0.7.0"
rand = "0.8.5"
